kubernetes/clusters/delta/apps/monitoring/loki/ingress-route.yaml
#Workaround for external-dns https://github.com/kubernetes-sigs/external-dns/issues/1257#issuecomment-628638415
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: system-monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/hostname: loki.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${SECRET_DOMAIN}
spec:
  rules:
    - host: loki.${SECRET_DOMAIN}  
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: system-monitoring
spec:
  routes:
  - kind: Rule
    match: Host(`loki.${SECRET_DOMAIN}`)
    middlewares:
    - name: loki-basic-auth
    services:
    - name: loki
      port: 3100
